# BSUIR-labs

./: README.md
1 semestr/: README.MD
1 semestr/lab 1 - 2/: README.MD  laba 2 (reworked).c
1 semestr/lab 3/: ConsoleApplication1.c  README.MD
1 semestr/lab 4/: README.MD  laba 4.c  laba 4.cpp
1 semestr/lab 5/: README.MD  laba5.c
1 semestr/lab 6/: README.MD  laba6.c  laba6.cpp
1 semestr/lab 7/: README.MD  laba7.c
1 semestr/lab 8/: README.MD  laba 8.c  laba 8.cpp
1 semestr/laba 1 - 2/: laba 2 (reworked).cpp  исходник блок-схемы.drawio
1 semestr/laba 3/: ConsoleApplication1.cpp
1 semestr/laba 3 files/: main.cpp
1 semestr/laba 4/: laba 4.cpp
1 semestr/laba 5/: laba5.cpp
1 semestr/laba 6/: laba6.cpp
1 semestr/laba 7/: laba7.cpp
1 semestr/laba 8/: laba 8.cpp
2 semestr/: README.MD  lab 1.cpp  lab 2.cpp  laba 1.cpp  laba 3.cpp
2 semestr/lab 4/Debug/: laba 4.ilk
2 semestr/lab 4/laba 4/: laba 4.vcxproj  modify.txt  test.txt
2 semestr/lab 5/Debug/: laba 5.ilk
2 semestr/lab 5/laba 5/: Source.cpp  laba 5.vcxproj.filters  saved.txt  testing.txt
2 semestr/lab 6/Debug/: laba 6.ilk
2 semestr/lab 7 (tree)/: derevo.sln
2 semestr/lab 7 (tree)/ConsoleApplication1/: ConsoleApplication1.cpp
2 semestr/laba 4/: laba 4.sln
2 semestr/laba 4/laba 4/: Source.cpp
2 semestr/laba 5/: laba 5.sln
2 semestr/laba 5/laba 5/: laba 5.vcxproj
2 semestr/laba 6/: laba 6.sln
2 semestr/laba 6/laba 6/: check.txt  laba 6.vcxproj  main.cpp
2 semestr/laba 7 (tree)/ConsoleApplication1/: ConsoleApplication1.vcxproj
2 semestr/laba 7 (tree)/Debug/: ConsoleApplication1.ilk
3 semestr/: README.MD
3 semestr/Lab_10/: Laba_10.pro  list_iterator.cpp  main.cpp  twice_list.cpp  twice_list.h
3 semestr/Lab_5/: main.cpp
3 semestr/Lab_7/: hotline_miami  main.cpp
3 semestr/Laba_10/: exceptions.cpp  exceptions.h  list_iterator.h
3 semestr/Laba_6/: main.cpp
3 semestr/Laba_8/: main.cpp
3 semestr/Laba_9/: main.cpp
3 semestr/The_End/: main.cpp
3 semestr/The_end_is_near_11/: The_end_is_near_11.pro  branch.cpp  branch.h  exceptions.cpp  exceptions.h  leaves.cpp  leaves.h  main.cpp  plant.cpp  plant.h  tree.cpp  tree.h
3 semestr/lab_4/: main.cpp
4 semestr/APK/: README.MD
4 semestr/APK/Lab 3/: README.MD  lab3v1.cpp
4 semestr/APK/Lab 4/: README.MD  lab.CPP
4 semestr/APK/Laba 1 (tty0tty)/: APKp2.asm  APKp3.asm  README.MD  communication_tty0tty.cpp  отчет АПК Лаба №1.docx
4 semestr/CSS/: README.MD
4 semestr/CSS/Lab 2/: main.c
4 semestr/CSS/Lab 3/: README.MD
4 semestr/CSS/Lab 4 (process manager)/: README.MD  functions.h  process.c
4 semestr/CSS/Lab 5 (threads)/: README.MD
4 semestr/Circuit Design/: answers on questions.odt
4 semestr/JavaCPP/: .gitignore  README.md  Task_Epam.docx  pom.xml
4 semestr/KPP/: README.MD
4 semestr/PCA/: README.MD  АПК лабы.doc
4 semestr/PDaPL/: README.MD  REAMDE.MD
4 semestr/КПиЯП/: REAMDE.MD
4 semestr/СПОВМ/: README.MD
5 semestr/CourseProjectCircuitry/: CodeArduino  CodeEsp32  README.MD  sample.cpp  БлокСхемаArduino.drawio  БлокСхемаESP32.drawio  Вся записка.odt  Лист_задания.odt  ПереченьЭлементов.drawio  ПринципиальнаяСхемаА3.drawio  Структурная схема устройства.drawio  функциональнаяСхема.drawio
5 semestr/FIS/: README.MD
5 semestr/IPD/: README.MD
5 semestr/IPD/Lab4/NonSilentMode/: CMakeLists.txt  NonSilentMode.qbs  main.cpp
5 semestr/IPD/Lab4/SilentMode/: CMakeLists.txt  SilentMode.qbs  SilentPhoto.cpp  SilentVideo.cpp
5 semestr/SFOC/: README.MD
5 semestr/circuitry/: README.MD
5 semestr/examens/: .$22.Байт-стаффинг.drawio.bkp  .$24.Линейные коды без возврата к нулю и с возвратом к нулю.drawio.bkp  .$24.Линейные коды без возврата к нулю и с возвратом к нулю.drawio.dtmp  .$7.drawio.bkp  .$Алгоритмы бит-стаффинга и байт-стаффинга (схемы и алгоритмы).drawio.bkp
6 semestr/ACSN/: README.MD
6 semestr/CourseProjectSFOC/: ESP32_WIP_.ino  README.MD  arduino_BaseWorks_.ino
6 semestr/DSIP/: README.md
6 semestr/HPPA/: README.md
6 semestr/Internship/: OrganisationStructure.drawio  Отчет практика.odt
6 semestr/exam/: README.MD
7 semestr/CNHCourseProject/: README.MD
7 semestr/DSIP/: README.MD
7 semestr/Databases/: README.MD
7 semestr/MMaS/: README.md  generic-msp430-gcc.cmake  uploadSketch.sh
7 semestr/Modeling/raik199x/Lab1/: .clang-format  CMakeLists.txt
7 semestr/Modeling/raik199x/Lab1/backend/: Nists.cpp  Nists.h  Threading.cpp  Threading.h
7 semestr/Modeling/raik199x/Lab1/backend/NistOperationalFunctions/: AlgorithmOperations.cpp  FileOperatons.cpp  GraphicsOperations.cpp  MathOperations.cpp  MatrixOperations.cpp  Operations.h
7 semestr/Modeling/raik199x/Lab1/backend/RandomGenerators/: Cplusplus.cpp  Generators.h  Lehmer.cpp  Mic.cpp  MiddleSquares.cpp
7 semestr/Modeling/raik199x/Lab1/data/: basicTemplate.txt  inevitableFail.txt
7 semestr/Modeling/raik199x/Lab1/docs/: README.MD
7 semestr/Modeling/raik199x/Lab1/frontend/: LehmerWidget.cpp  LehmerWidget.h  MicWidget.cpp  MicWidget.h  MiddleSquaresWidget.h  TableWidget.cpp  TableWidget.h  mainwindow.cpp  mainwindow.h
7 semestr/Modeling/raik199x/Lab1/include/: sharedVariables.h
7 semestr/Modeling/raik199x/Lab2/: .clang-format  CMakeLists.txt  main.cpp
7 semestr/Modeling/raik199x/Lab2/backend/OperationalFunctions/: GraphicsOperations.cpp  Operations.h
7 semestr/Modeling/raik199x/Lab2/backend/RandomGenerators/: Generators.h  Lehmer.cpp  MiddleSquares.cpp  distributions.cpp
7 semestr/Modeling/raik199x/Lab2/docs/: README.MD
7 semestr/Modeling/raik199x/Lab2/frontend/: DistributionMenu.cpp  DistributionMenu.h  LehmerWidget.cpp  MathStats.h  MiddleSquaresWidget.cpp  SelectionSizeWidget.cpp  SelectionSizeWidget.h  mainwindow.cpp  mainwindow.h
7 semestr/Modeling/raik199x/Lab2/include/: sharedVariables.h
7 semestr/exams/: CNH.docx  Билеты Сполкс а4.docx
8 semestr/CaDCE/: run_modius.sh
8 semestr/MSPaS/: README.MD
8 semestr/SSfLCN/: README.MD
MyLibs/C_Lib/: functions.c  functions.h
билеты 9-16 оаип 2 сем/: bilet 10.cpp  bilet 11.cpp  bilet 12.cpp  bilet 13.cpp  bilet 14.cpp  bilet 15.cpp  bilet 16.cpp  bilet 9.cpp
(+633 files in other folders)
